fixing z-index

--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -16,12 +16,25 @@ body {
 
 }
 
-.highlight{
-    color:#46DBF9;
+.highlight {
+    color: #46DBF9;
 }
+
 .viewport {
     perspective: 2000px;
     overflow: hidden;
+}
+
+.clouds-world-wrapper {
+    
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 10;
+
+
 }
 
 .clouds-world {
@@ -32,12 +45,8 @@ body {
         transform-style: preserve-3d;
     }
 
-    position: absolute;
-    bottom:0;
-    left:0;
-    width: 100%;
-    height: 100vh;
-    z-index: 10;
+    height: 100%;
+    width:100%;
 }
 
 .clouds-container {
@@ -184,32 +193,33 @@ body {
     left: 0;
 }
 
-.header{
-    
+.header {
+    z-index: 5;
 }
 
-#plane {
-    
-}
+#plane {}
 
 
 
 .plane-wrapper {
     position: absolute;
 
-    left:0;
-    top:0;
+    left: 0;
+    top: 0;
     width: 10%;
     display: block;
-    
+
     img {
         width: 100%;
         transform: translateZ(100px) scale(0.75);
     }
+
     perspective: 2000px;
     //
-    z-index: 5;
+    z-index: 8;
+    overflow: visible;
 }
+
 
 
 
@@ -256,26 +266,34 @@ body {
         padding-left: 5px;
     }
 }
-.card{
+
+.card {
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-    padding:15px;
-    border:none !important;
-    text-align:center;
-    p , h3 , .icon-card{
-        margin-top:15px;
+    padding: 15px;
+    border: none !important;
+    text-align: center;
+
+    p,
+    h3,
+    .icon-card {
+        margin-top: 15px;
     }
-    .icon-card{
-        font-size:2.0rem;
-        color:#46DBF9;
+
+    .icon-card {
+        font-size: 2.0rem;
+        color: #46DBF9;
     }
-    h3{
-        color:#46DBF9;
+
+    h3 {
+        color: #46DBF9;
     }
 }
-.section.services{
-    margin-bottom:200px;
-    margin-top:100px;
+
+.section.services {
+    margin-bottom: 200px;
+    margin-top: 100px;
 }
-.section.planning{
-    margin-top:200px;
+
+.section.planning {
+    margin-top: 200px;
 }
